--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-12-01  Carsten Haitzler (The Rasterman)
+
+        * 1.8 release
+
 2013-11-28  ChunEon Park (Hermet)
 
         * Evas: If the line goes to the 0, 0 then it won't be updated. Now it's
