NEWS: added EFL 1.9.0 NEWS entry.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,20 @@
 =========
+EFL 1.9.0
+=========
+
+Changes since 1.8.0:
+--------------------
+
+Additions:
+
+Improvements:
+
+Fixes:
+
+Removals:
+
+
+=========
 EFL 1.8.0
 =========
 
