ecore ecore_x_e: check 0 and -1 for ecore_x_window_prop_card32_get() return value which mean fail.
- ecore_x_window_prop_card32_get() returns:
  -1 if the property was not successfully fetched.
  0 if the property exists but has no elements.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-12-02  Daniel Juyung Seo (SeoZ)
+
+        * Check ecore_x_window_prop_card32_get() return value correctly in ecore_x_e.
+
 2013-12-01  Carsten Haitzler (The Rasterman)
 
         * 1.8 release
