--- a/NEWS
+++ b/NEWS
@@ -5,13 +5,8 @@ EFL 1.8.1
 Changes since 1.8.0:
 --------------------
 
-Fixes:
-
+    * Fixed build problem which named shared libs as "release".
     * Check ecore_x_window_prop_card32_get() return value correctly in ecore_x_e.
-
-=========
-EFL 1.8.0
-=========
 
 Changes since 1.7.0:
 --------------------
