--- a/po/ko.po
+++ b/po/ko.po
@@ -3,7 +3,7 @@
 # This file is put in the public domain.
 # Jerome Pinot <ngc891@gmail.com>
 # Daniel Juyung Seo <seojuyung2@gmail.com>, 2011-2013
-# Seong-ho Cho <darkcircle.0426@gmail.com>, 2012.
+# Seong-ho Cho <darkcircle.0426@gmail.com>, 2012-2013
 #
 msgid ""
 msgstr ""
@@ -11,12 +11,15 @@ msgstr ""
 "Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2013-12-01 18:58+0900\n"
 "PO-Revision-Date: 2013-01-02 07:33+0900\n"
-"Last-Translator: Daniel Juyung Seo <seojuyung2@gmali.com>\n"
+"Last-Translator: Seong-ho Cho <darkcircle.0426@gmail.com>\n"
 "Language-Team: Enlightenment Team\n"
-"Language: \n"
+"Language: Korean\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.5\n"
+"Plural-Forms: nplurals=1;plural=0;\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
 #: src/lib/ecore/ecore_getopt.c:87
 msgid "Version:"
@@ -84,16 +87,17 @@ msgstr "알 수 없는 부울린 값 %s 입니다.\n"
 #: src/lib/ecore/ecore_getopt.c:1020 src/lib/ecore/ecore_getopt.c:1277
 #, c-format
 msgid "invalid number format %s\n"
-msgstr "잘못된 숫자 형식 %s 입니다\n"
+msgstr "%s 숫자 형식이 잘못되었습니다\n"
 
 #: src/lib/ecore/ecore_getopt.c:1135
 #, c-format
 msgid "invalid choice \"%s\". Valid values are: "
-msgstr "잘못된 선택 \"%s\" 입니다. 유효한 값은 다음과 같습니다: "
+msgstr "\"%s\" 선택이 잘못되었습니다. 유효한 값은 다음과 같습니다: "
 
 #: src/lib/ecore/ecore_getopt.c:1163
 msgid "missing parameter to append.\n"
-msgstr "붙일 매개변수가 빠졌습니다.\n"
+msgstr "추가할 매개 변수가 빠졌습니다.\n"
+
 
 #: src/lib/ecore/ecore_getopt.c:1267
 msgid "could not parse value.\n"
@@ -101,7 +105,7 @@ msgstr "값을 해석할 수 없습니다.\n"
 
 #: src/lib/ecore/ecore_getopt.c:1324
 msgid "missing parameter.\n"
-msgstr "매개변수가 빠졌습니다.\n"
+msgstr "매개 변수가 빠졌습니다.\n"
 
 #: src/lib/ecore/ecore_getopt.c:1337
 msgid "missing callback function!\n"
@@ -158,12 +162,12 @@ msgstr "오류: 잘못된 옵션이 있습니다."
 #: src/lib/ecore/ecore_getopt.c:1860
 #, c-format
 msgid " See --%s.\n"
-msgstr " --%s을(를) 참조하십시오.\n"
+msgstr " --%s 옵션을 참조하십시오.\n"
 
 #: src/lib/ecore/ecore_getopt.c:1862
 #, c-format
 msgid " See -%c.\n"
-msgstr " -%c을(를) 참조하십시오.\n"
+msgstr " -%c 옵션을 참조하십시오.\n"
 
 #: src/lib/ecore/ecore_getopt.c:1908
 #, c-format
@@ -185,7 +189,7 @@ msgstr "다운로드"
 
 #: src/lib/efreet/efreet_base.c:136
 msgid "Templates"
-msgstr "템플릿"
+msgstr "서식"
 
 #: src/lib/efreet/efreet_base.c:145
 msgid "Public"
