--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 =========
+EFL 1.8.4
+=========
+
+Changes since 1.8.3:
+--------------------
+
+    * ecore_con: fix crash on timeout when using dns.c resolver
+
+=========
 EFL 1.8.3
 =========
 
