--- a/po/sr.po
+++ b/po/sr.po
@@ -7,17 +7,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: enlightenment\n"
-"Report-Msgid-Bugs-To: enlightenment-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2013-12-02 12:42+0900\n"
-"PO-Revision-Date: 2013-06-20 04:43+0000\n"
+"Report-Msgid-Bugs-To: $MSGID_BUGS_ADDRESS\n"
+"POT-Creation-Date: 2013-12-30 11:41+0100\n"
+"PO-Revision-Date: 2013-12-30 12:06+0000\n"
 "Last-Translator: Саша Петровић <salepetronije@gmail.com>\n"
 "Language-Team: српски <српски <xfce-i18n@xfce.org>>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-06-21 05:36+0000\n"
-"X-Generator: Launchpad (build 16677)\n"
+"X-Launchpad-Export-Date: 2013-12-31 05:52+0000\n"
+"X-Generator: Launchpad (build 16877)\n"
+"Language: \n"
 
 #: src/lib/ecore/ecore_getopt.c:87
 msgid "Version:"
