efl - updated AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Mike Blumenkrantz <michael.blumenkrantz@gmail.com>
 Patryk Kaczmarek <patryk.k@samsung.com>
 Igor Murzov <e-mail@date.by>
 Vladislav Brovko <v.brovko@samsung.com>
+ChunEon Park (Hermet) <hermet@hermet.pe.kr>
 
 Eet
 ---
@@ -127,7 +128,7 @@ Zbigniew Kosinski <z.kosinski@samsung.com>
 Paulo Cavalcanti <paulo.cavalcanti@linux.intel.com>
 Jean-Philippe Andre <jp.andre@samsung.com>
 Yury Usischev <y.usishchev@samsung.com>
-
+Youngbok Shin <youngb.shin@samsung.com>
 
 Ecore
 -----
